--- a/aboutUs.html
+++ b/aboutUs.html
@@ -124,7 +124,7 @@
   <div>
     <div class="container-fluid mt-3">
     <div class="row">
-       <div class="col-md-6 p-5">
+       <div class="col-md-6 p-5 d-flex justify-content-center" style="flex-direction: column;">
         <h2>
           Empowering Professionals and <br/> Youth with Smart NFC Cards 
         </h2>
@@ -133,11 +133,11 @@
          </h6>
         <div class="container-fluid mt-3">
           <div class="row ">
-            <div class="col p-5">
+            <div class="col p-7">
               <h5 style="text-align: left;">Unique Features</h5>
               <h6 style="text-align: left;">Our smart NFC cards offer advanced features such as instant data transfer and customizable designs.</h6>
             </div>
-            <div class="col p-5">
+            <div class="col p-7">
               <h5 style="text-align: left;">Efficient Networking</h5>
               <h6 style="text-align: left;">Connect with others seamlessly and build valuable connections with our smart NFC cards.</h6>
             </div>
@@ -313,7 +313,7 @@
   <div>
     <div class="container-fluid mt-3">
     <div class="row">
-       <div class="col-6 p-5 border border-primary d-flex justify-content-center" style="flex-direction: column;">
+       <div class="col-6 p-5 d-flex justify-content-center" style="flex-direction: column;">
         <h3>
           Unlock the power of smart <br>technology with Manjithaaza's innovative solutions.
         </h3>
@@ -346,7 +346,7 @@
 <div>
   <div class="container-fluid mt-3">
   <div class="row">
-     <div class="col-6 p-5">
+     <div class="col-6 p-5 ">
       <h1>
         Empower Your Digital <br>Journey Today
       </h1>
