--- a/index.html
+++ b/index.html
@@ -232,71 +232,65 @@
       </div>
     </div>
 
-    <div>
-      <div class="container-fluid mt-3">
-        <div class="row d-flex justify-content-between">
-          <div class="col-md-5 p-5">
-            <div
-              class="design-left d-flex justify-content-center"
-              style="flex-direction: column"
-            >
-              <p>Design</p>
-              <h2 style="line-height: 45px">
-                Create Your Own Unique <br />
-                Smart Card Design
-              </h2>
-              <h6 style="line-height: 25px">
-                With our Smart Card online design feature, you can easily
-                personalize and customize your own smart card. Choose from a
-                variety of templates, colors, and fonts to create a unique
-                design that reflects your style and brand.
-              </h6>
-              <p>
-                <i class="bi bi-box" style="margin-right: 5px"></i> Easy-to-use
-                Design Tools
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-between align-items-stretch">
+        <div class="col-md-6 p-5">
+          <div class="design-left  d-flex flex-column justify-content-center">
+            <p>Design</p>
+            <h2 class="design-title">
+              Create Your Own Unique <br />
+              Smart Card Design
+            </h2>
+            <h6 class="design-subtitle">
+              With our Smart Card online design feature, you can easily
+              personalize and customize your own smart card. Choose from a
+              variety of templates, colors, and fonts to create a unique
+              design that reflects your style and brand.
+            </h6>
+            <p>
+              <i class="bi bi-box me-2"></i> Easy-to-use Design Tools
+            </p>
+            <p>
+              <i class="bi bi-box me-2"></i> Endless Design Possibilities
+            </p>
+            <p>
+              <i class="bi bi-box me-2"></i> Express Your Personal or Brand Identity
+            </p>
+            <div class="d-flex align-items-center mt-3">
+              <button
+                type="button"
+                class="btn btn-outline-light pt-2 px-2"
+              >
+                Get Started
+              </button>
+              <p class="ms-3 mb-0">
+                Learn More
+                <i class="bi bi-caret-right"></i>
               </p>
-              <p>
-                <i class="bi bi-box" style="margin-right: 5px"></i>Endless
-                Design Possibilities
-              </p>
-              <p>
-                <i class="bi bi-box" style="margin-right: 5px"></i>Express Your
-                Personal or Brand Identity
-              </p>
-              <div class="d-flex align-items-center">
-                <button
-                  type="button"
-                  class="btn btn-outline-light justify-content-center pt-2 px-2 mt-3"
-                >
-                  Get Started
-                </button>
-                <p class="px-2" style="margin-top: 30px">
-                  Learn More
-                  <i class="bi bi-caret-right"></i>
-                </p>
-              </div>
             </div>
           </div>
-          <div class="col-md-5 p-5 d-flex justify-content-center">
-            <img
-              src="./asset/img/about_pic1.png"
-              class="img-fluid design"
-              alt="Hero Section Image"
-            />
-          </div>
+        </div>
+        <div class="col-md-6 p-5 d-flex align-items-center flex-grow-1">
+          <img
+            src="./asset/img/about_pic1.png"
+            class="img-fluid w-100"
+            alt="Hero Section Image"
+          />
         </div>
       </div>
     </div>
+    
+
     <div class="container-fluid mt-3">
       <div class="row align-items-center" style="padding: 30px">
-        <div class="col-md-5" style="padding-left: 20px">
+        <div class="col-md-6" style="padding-left: 20px">
           <h2 style="line-height: 45px">
             Choose the Perfect Smart Card Package for Your Needs
           </h2>
         </div>
 
-        <div class="col-md-7">
-          <p style="line-height: 35px">
+        <div class="col-md-6">
+          <p style="line-height: 35px;padding-left: 30px;">
             At Manjithaaza, we offer a range of Smart Card packages to suit
             every requirement. Whether you're a professional looking to share
             your contact information or a business wanting to enhance your
@@ -313,7 +307,7 @@
     <div class="container-fluid mt-3">
       <div class="row" style="padding: 30px">
         <div class="col-md-12 d-flex justify-content-center">
-          <img src="./asset/img/big.png" class="img-fluid" />
+          <img src="./asset/img/big.png" class="img-fluid w-100" />
         </div>
       </div>
     </div>
@@ -501,10 +495,10 @@
           <button type="button" class="btn btn-light me-2">Try</button>
           <button type="button" class="btn btn-outline-light">Design</button>
         </div>
-        <div class="col-4 p-5">
+        <div class="col-5 p-5">
           <img
             src="./asset/img/about_pic1.png"
-            class="img-fluid"
+            class="img-fluid w-100"
             alt="Hero Section Image"
           />
         </div>
@@ -521,9 +515,9 @@
       </div>
     </div>
 
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+    <div class="container-fluid">
+      <div class="row mb-5" style="padding:30px">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3"  style="padding-left: 20px">
           <div class="card" style="width: 100%">
             <img
               src="./asset/img/card.png"
@@ -622,63 +616,7 @@
       </div>
     </div>
 
-    <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <!-- First item -->
-        <div class="carousel-item active">
-          <div class="container">
-            <div class="row">
-              <p class="text-center mt-5">Webflow</p>
-              <p class="text-center">
-                Our experience with Manjithaaza has been outstanding. Their smart NFC
-                cards have revolutionized the way we exchange contact information.
-              </p>
-              <div class="text-center">
-                <i class="bi bi-person-circle" style="font-size: 2.5rem;"></i>
-                <p class="mt-2">John Doe</p>
-                <p>CEO, XYZ Company</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Add more carousel items as needed -->
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <p class="text-center mt-5">Another Company</p>
-              <p class="text-center">
-                Manjithaaza's NFC cards have made our networking effortless. A must-have
-                for modern professionals.
-              </p>
-              <div class="text-center">
-                <i class="bi bi-person-circle" style="font-size: 2.5rem;"></i>
-                <p class="mt-2">Jane Smith</p>
-                <p>COO, ABC Corp</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-      <!-- Carousel controls -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="">
-          <p class="text-center">Articles</p>
-          <h3 class="text-center">Discover Valuable Resources Here</h3>
-          <p class="text-center">Stay Informed with Our Latest Articles</p>
-        </div>
-      </div>
-    </div>
+   
     <hr style="height:2px;border-width:0;color:white;background-color:white">
   </body>
 </html>
