add details page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -123,36 +123,40 @@
   <!-- aboutus-3rd-section -->
   <div>
     <div class="container-fluid mt-3">
-    <div class="row">
-       <div class="col-md-6 p-5 d-flex justify-content-center" style="flex-direction: column;">
+      <div class="row">
+        <div
+          class="col-md-6 p-5 d-flex justify-content-center"
+          style="flex-direction: column"
+        >
         <h2>
           Empowering Professionals and <br/> Youth with Smart NFC Cards 
         </h2>
         <h6>
           At Manjithaaza, we specialize in providing smart NFC cards that revolutionize  the way professionals and youth share contact information. Our cards are  designed to be easy to use, environmentally sustainable, and cost-effective.
          </h6>
-        <div class="container-fluid mt-3">
-          <div class="row ">
-            <div class="col p-7">
-              <h5 style="text-align: left;">Unique Features</h5>
-              <h6 style="text-align: left;">Our smart NFC cards offer advanced features such as instant data transfer and customizable designs.</h6>
+
+            <div class="row">
+              <div class="col-md-6">
+                <h5>Unique Features</h5>
+                <h6>
+                  Our smart NFC cards offer advanced features such as instant data transfer and customizable designs.
+                </h6>
+              </div>
+              <div class="col-md-6">
+                <h5>Efficient Networking</h5>
+                <h6>
+                  Connect with others seamlessly and build valuable connections with our smart NFC cards.
+                </h6>
+              </div>
             </div>
-            <div class="col p-7">
-              <h5 style="text-align: left;">Efficient Networking</h5>
-              <h6 style="text-align: left;">Connect with others seamlessly and build valuable connections with our smart NFC cards.</h6>
-            </div>
-          </div>
         </div>
-        
-       </div>
-       <div class="col-md-6 p-5">
-        <img
-              src="./asset/img/about_pic1.png"
-              class="img-fluid"
-              alt="Hero Section Image"
-            />
-       </div>
-       </div>
+        <div class="col-md-6 p-5">
+          <img
+            src="./asset/img/about_pic1.png"
+            class="img-fluid"
+            alt="Hero Section Image"
+          />
+        </div>
       </div>
     </div>
   </div>
@@ -186,36 +190,37 @@
   </div>
 </div>
 <!-- aboutus-5th-section -->
-  <div class="container-fluid mt-3">
-    <div class="row d-flex justify-content-around">
-       <div class="about-us-card col-md-3 p-5 gx-5">
-        <h4>
-          Smart Digital Accessories for Enhanced Connectivity
-        </h4>
-        <h6>
-          Our smart digital accessories enable enhanced connectivity and communication.
-        </h6>
-       </div>
-       <div class="about-us-card col-md-3 p-5">
-        <h4>
-          Digital Services for Streamlined Operations
-        </h4>
-        <h6>
-          We offer digital services to streamline your operations and boost productivity.
-        </h6>
-       </div>
-       <div class="about-us-card col-md-3 p-5">
-        <h4>
-          Environmentally Sustainable Solutions for a Greener Future
-        </h4>
-        <h6>
-          Our solutions are environmentally sustainable, contributing to a greener future.
-        </h6>
-       </div>
-      </div>
+<div class="container-fluid mt-3">
+  <div class="row d-flex justify-content-around">
+    <div class="about-us-card col-md-3 p-5">
+      <i class="bi bi-box"></i>
+      <h4>
+        Smart Digital Accessories for Enhanced Connectivity
+      </h4>
+      <h6>
+        Our smart digital accessories enable enhanced connectivity and communication.
+      </h6>
     </div>
-
+    <div class="about-us-card col-md-3 p-5">
+      <i class="bi bi-box"></i>
+      <h4>
+        Digital Services for Streamlined Operations
+      </h4>
+      <h6>
+        We offer digital services to streamline your operations and boost productivity.
+      </h6>
+    </div>
+    <div class="about-us-card col-md-3 p-5">
+      <i class="bi bi-box"></i>
+      <h4>
+        Environmentally Sustainable Solutions for a Greener Future
+      </h4>
+      <h6>
+        Our solutions are environmentally sustainable, contributing to a greener future.
+      </h6>
+    </div>
   </div>
+</div>
   <!-- aboutus-6th-section -->
   <div class="container-fluid mt-3">
     <div class="row d-flex justify-content-center">
@@ -333,14 +338,53 @@
     </div>
   </div>
 <!-- aboutus-10th-section -->
-<div class="container-fluid mt-3">
-  <div class="row d-flex justify-content-center">
-      <div class="col-md-7" ><h6 style="text-align: center;">WebFlow</h6>
-        <h5 style="text-align: center;">Our experience with Manjithaaza has been outstanding. Their smart NFC cards have revolutionized the way we exchange contact information.</h5>
-        <h6 style="text-align: center;">John Doe</h6>
-        <h6 style="text-align: center;">CEO, XYZ Company</h6>
+<div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <!-- First item -->
+    <div class="carousel-item active">
+      <div class="container">
+        <div class="row">
+          <p class="text-center mt-5">Webflow</p>
+          <p class="text-center">
+            Our experience with Manjithaaza has been outstanding. Their smart NFC
+            cards have revolutionized the way we exchange contact information.
+          </p>
+          <div class="text-center">
+            <i class="bi bi-person-circle" style="font-size: 2.5rem;"></i>
+            <p class="mt-2">John Doe</p>
+            <p>CEO, XYZ Company</p>
+          </div>
+        </div>
       </div>
+    </div>
+    <!-- Add more carousel items as needed -->
+    <div class="carousel-item">
+      <div class="container">
+        <div class="row">
+          <p class="text-center mt-5">Another Company</p>
+          <p class="text-center">
+            Manjithaaza's NFC cards have made our networking effortless. A must-have
+            for modern professionals.
+          </p>
+          <div class="text-center">
+            <i class="bi bi-person-circle" style="font-size: 2.5rem;"></i>
+            <p class="mt-2">Jane Smith</p>
+            <p>COO, ABC Corp</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- Carousel controls -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 <!-- aboutus-11th-section -->
 <div>
@@ -406,7 +450,7 @@
  </div>
 </div>
 <div>
-  <hr>
+  <hr style="height:2px;border-width:0;color:white;background-color:white">
 </div>
 </body>
 </html>
