--- a/products.html
+++ b/products.html
@@ -256,28 +256,27 @@
             class="col-md-6 p-5 d-flex justify-content-center"
             style="flex-direction: column"
           >
-            <h6>Innovative</h6>
-            <h2>Experience the Power of Deluxe Smart NFC Cards</h2>
-            <h6>
-              Our Deluxe Smart NFC Cards are packed with advanced features and
-              cutting-edge technology, making them the perfect solution for
-              professionals and individuals looking to stay connected and
-              organized.
-            </h6>
-            <div class="container-fluid mt-3">
+          <h6>Innovative</h6>
+          <h2>Experience the Power of Deluxe Smart NFC Cards</h2>
+          <h6>
+            Our Deluxe Smart NFC Cards are packed with advanced features and
+            cutting-edge technology, making them the perfect solution for
+            professionals and individuals looking to stay connected and
+            organized.
+          </h6>
               <div class="row">
-                <div class="col p-7">
-                  <h5 style="text-align: left">Enhanced Connectivity</h5>
-                  <h6 style="text-align: left">
+                <div class="col-md-6">
+                  <h5>Enhanced Connectivity</h5>
+                  <h6>
                     Exchange contact information seamlessly with our Deluxe
                     Smart NFC Cards.
                   </h6>
                 </div>
-                <div class="col p-7">
-                  <h5 style="text-align: left">Effortless Organization</h5>
-                  <h6 style="text-align: left">
-                    Stay organized and manage your digital business cards with
-                    ease using our smart technology.
+                <div class="col-md-6">
+                  <h5>Effortless Organization</h5>
+                  <h6>
+                    Stay organized and never worry about running out of business
+                    cards again.
                   </h6>
                 </div>
               </div>
@@ -293,7 +292,6 @@
                   <i class="bi bi-caret-right"></i>
                 </p>
               </div>
-            </div>
           </div>
           <div class="col-md-6 p-5">
             <img
@@ -313,30 +311,29 @@
             class="col-md-6 p-5 d-flex justify-content-center"
             style="flex-direction: column"
           >
-            <h2>Discover the Power of Manjithaaza Elite Smart NFC Cards</h2>
-            <h6>
-              Our Elite Smart NFC Cards revolutionize the way you share contact
-              information. With a simple tap, you can effortlessly exchange your
-              details with others.
-            </h6>
-            <div class="container-fluid mt-3">
+          <h2>Discover the Power of Manjithaaza Elite Smart NFC Cards</h2>
+          <h6>
+            Our Elite Smart NFC Cards revolutionize the way you share contact
+            information. With a simple tap, you can effortlessly exchange your
+            details with others.
+          </h6>
+
               <div class="row">
-                <div class="col p-7">
-                  <h5 style="text-align: left">Efficient Communication</h5>
-                  <h6 style="text-align: left">
+                <div class="col-md-6">
+                  <h5>Efficient Communication</h5>
+                  <h6>
                     Say goodbye to outdated business cards. Our Elite Smart NFC
                     Cards make networking effortless.
                   </h6>
                 </div>
-                <div class="col p-7">
-                  <h5 style="text-align: left">Sustainable Solution</h5>
-                  <h6 style="text-align: left">
+                <div class="col-md-6">
+                  <h5>Sustainable Solution</h5>
+                  <h6>
                     Our Elite Smart NFC Cards are environmentally friendly and
                     cost-effective, reducing paper waste.
                   </h6>
                 </div>
               </div>
-            </div>
           </div>
           <div class="col-md-6 p-5">
             <img
@@ -384,25 +381,24 @@
             class="col-md-6 p-5 d-flex justify-content-center"
             style="flex-direction: column"
           >
-            <h6>Affordable</h6>
-            <h2>Cost-Effective Smart NFC Cards for Every Need</h2>
-            <h6>
-              Our smart NFC cards offer a cost-effective solution for
-              professionals and individuals who want to easily share their
-              contact information.
-            </h6>
-            <div class="container-fluid mt-3">
+          <h6>Affordable</h6>
+          <h2>Cost-Effective Smart NFC Cards for Every Need</h2>
+          <h6>
+            Our smart NFC cards offer a cost-effective solution for
+            professionals and individuals who want to easily share their
+            contact information.
+          </h6>
               <div class="row">
-                <div class="col p-7">
-                  <h5 style="text-align: left">Efficient Solution</h5>
-                  <h6 style="text-align: left">
+                <div class="col-md-6">
+                  <h5>Efficient Solution</h5>
+                  <h6>
                     Save money while staying connected with our affordable smart
                     NFC cards.
                   </h6>
                 </div>
-                <div class="col p-7">
-                  <h5 style="text-align: left">Environmentally Friendly</h5>
-                  <h6 style="text-align: left">
+                <div class="col-md-6">
+                  <h5>Environmentally Friendly</h5>
+                  <h6>
                     Reduce paper waste and contribute to a greener future with
                     our eco-friendly smart cards.
                   </h6>
@@ -420,7 +416,6 @@
                   <i class="bi bi-caret-right"></i>
                 </p>
               </div>
-            </div>
           </div>
           <div class="col-md-6 p-5">
             <img
@@ -469,19 +464,18 @@
                 </div>
         </div>
     </div>
-</div>
-    
+</div>   
      <!-- products 11th section -->
      <div>
         <div class="container-fluid mt-3">
-          <div class="row border border-primary d-flex hero-section align-items-center">
-            <div class="col-md-6 border border-primary">
+          <div class="row d-flex hero-section align-items-center">
+            <div class="col-md-6">
               <h2>Design Your Own Smart Card</h2>
               <p>
                 Create a personalized NFC card for your needs
               </p>
             </div>
-            <div class="col-md-6 border border-primary d-flex justify-content-end">
+            <div class="col-md-6 d-flex justify-content-end">
                 <button type="button" class="btn btn-light me-2">Learn More</button>
           <button type="button" class="btn btn-outline-light">Log In</button>
         </div>
